fix horizontal scroll

--- a/addon/styles/app.css
+++ b/addon/styles/app.css
@@ -2,8 +2,11 @@
 occlusion-collection,
 vertical-collection,
 occlusion-item,
-vertical-item {
-  display: block;
+vertical-item,
+horizontal-item,
+horizontal-occlusion-collection,
+horizontal-occlusion-item {
+  display: inline-block;
   width: 100%;
   position: static;
   }
@@ -18,3 +21,10 @@ vertical-item::after {
   position: relative;
 }
 
+horizontal-item::after, horizontal-item::before {
+  display: inline-block;
+  content: ' ';
+  width: 0;
+  height: 100%;
+  position: relative;
+}
